--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -187,9 +187,12 @@
     border-radius: 42px;
     border: none;
     font-family: "Poppins", sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     letter-spacing: 1px;
     box-shadow: 0px 4px 8px rgba(1, 0, 0, 0.3);
+}
+.search::placeholder{
+    height: 30px;
 }
 .searchContainer {
     position: relative;
