--- a/front/src/components/CadastroCurso.module.css
+++ b/front/src/components/CadastroCurso.module.css
@@ -27,11 +27,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 15px ;
+    border-radius: 15px;
     min-height: 60vh;
     width: 85vw;
-    padding: 50px;
+    padding: 26px;
     box-shadow: 0px 5px rgba(75, 71, 71, 0.4);
+    margin-left: 70PX;
 
 }
 
